--- a/lib/interface/layout/templates/root.html.heex
+++ b/lib/interface/layout/templates/root.html.heex
@@ -14,6 +14,10 @@
       <section class="container">
         <nav>
           <ul>
+            <%= if @current_user do %>
+              <li><%= link "Log out", to: Routes.user_path(@conn, :logout), method: :delete %></li>
+            <% end %>
+
             <%= if function_exported?(Routes, :live_dashboard_path, 2) do %>
               <li><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home) %></li>
             <% end %>
