Add sent mails page in dev
Also moved dev routes under dev, and showing them only in dev env.

--- a/lib/interface/layout/templates/root.html.heex
+++ b/lib/interface/layout/templates/root.html.heex
@@ -21,6 +21,10 @@
             <%= if function_exported?(Routes, :live_dashboard_path, 2) do %>
               <li><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home) %></li>
             <% end %>
+
+            <%= if Demo.Helpers.mix_env() == :dev do %>
+              <li><%= link "Sent mails", to: "/dev/mailbox" %></li>
+            <% end %>
           </ul>
         </nav>
 
