--- a/lib/interface/user/templates/start_registration_form.html.heex
+++ b/lib/interface/user/templates/start_registration_form.html.heex
@@ -1,15 +1,15 @@
-<h1>Activate your account</h1>
+<h1>Register</h1>
 
-<.form let={f} for={@changeset} action={Routes.user_path(@conn, :activate)}>
+<.form let={f} for={@changeset} action={Routes.user_path(@conn, :start_registration)}>
   <%= if @changeset.action do %>
     <div class="alert alert-danger">
       <p>Oops, something went wrong! Please check the errors below.</p>
     </div>
   <% end %>
 
-  <%= label f, :password %>
-  <%= password_input f, :password, required: true %>
-  <%= error_tag f, :password %>
+  <%= label f, :email %>
+  <%= email_input f, :email, required: true %>
+  <%= error_tag f, :email %>
 
   <div>
     <%= submit "Register" %>
