--- a/lib/interface/user/templates/activation_pending.html.heex
+++ b/lib/interface/user/templates/activation_pending.html.heex
@@ -1,3 +1,3 @@
 <section class="phx-hero">
-  <h1>Activation email has been sent to <%= @email %></h1>
+  The email with further instructions has been sent to <%= @email %>.
 </section>
