--- a/lib/interface/user/templates/login.html.heex
+++ b/lib/interface/user/templates/login.html.heex
@@ -13,8 +13,8 @@
   <%= label f, :password %>
   <%= password_input f, :password, required: true %>
 
-  <%= label f, :remember_me, "Keep me logged in for 60 days" %>
-  <%= checkbox f, :remember_me %>
+  <%= label f, :remember, "Keep me logged in for 60 days" %>
+  <%= checkbox f, :remember %>
 
   <div>
     <%= submit "Log in" %>
