Add start password reset form

--- a/lib/interface/user/templates/login.html.heex
+++ b/lib/interface/user/templates/login.html.heex
@@ -23,4 +23,5 @@
 
 <p>
   <%= link "Register", to: Routes.user_path(@conn, :start_registration_form) %>
+  <%= link "Forgot your password?", to: Routes.user_path(@conn, :start_password_reset_form) %>
 </p>
