--- a/lib/interface/user/templates/login.html.heex
+++ b/lib/interface/user/templates/login.html.heex
@@ -22,6 +22,6 @@
 </.form>
 
 <p>
-  <%= link "Register", to: Routes.user_path(@conn, :start_registration_form) %>
+  <%= link "Register", to: Routes.user_path(@conn, :start_registration_form) %> |
   <%= link "Forgot your password?", to: Routes.user_path(@conn, :start_password_reset_form) %>
 </p>
