Add settings form

--- a/lib/interface/layout/templates/root.html.heex
+++ b/lib/interface/layout/templates/root.html.heex
@@ -15,6 +15,7 @@
         <nav>
           <ul>
             <%= if @current_user do %>
+              <li><%= link "Settings", to: Routes.user_path(@conn, :settings) %></li>
               <li><%= link "Log out", to: Routes.user_path(@conn, :logout), method: :delete %></li>
             <% end %>
 
