--- a/lib/interface/user/templates/start_password_reset.html.heex
+++ b/lib/interface/user/templates/start_password_reset.html.heex
@@ -1,6 +1,6 @@
 <h1>Forgot your password?</h1>
 
-<.form let={f} for={@changeset} action={Routes.user_path(@conn, :start_password_reset)}>
+<.form let={f} for={@changeset} action={Routes.user_path(@conn, :start_password_reset)} as={:user}>
   <%= label f, :email %>
   <%= email_input f, :email, required: true %>
 
