--- a/lib/interface/user/templates/settings.html.heex
+++ b/lib/interface/user/templates/settings.html.heex
@@ -1,5 +1,27 @@
 <h1>Settings</h1>
 
+<h3>Change email</h3>
+
+<.form let={f} for={@email_changeset} action={Routes.user_path(@conn, :start_email_change)} as={:change_email}>
+  <%= if @email_changeset.action do %>
+    <div class="alert alert-danger">
+      <p>Oops, something went wrong! Please check the errors below.</p>
+    </div>
+  <% end %>
+
+  <%= label f, :email %>
+  <%= email_input f, :email, required: true %>
+  <%= error_tag f, :email %>
+
+  <%= label f, :password %>
+  <%= password_input f, :password, required: true %>
+  <%= error_tag f, :password %>
+
+  <div>
+    <%= submit "Change email" %>
+  </div>
+</.form>
+
 <h3>Change password</h3>
 
 <.form let={f} for={@password_changeset} action={Routes.user_path(@conn, :change_password)} as={:password}>
