--- a/lib/interface/user/templates/login.html.heex
+++ b/lib/interface/user/templates/login.html.heex
@@ -1,6 +1,6 @@
 <h1>Log in</h1>
 
-<.form let={f} for={@conn} action={Routes.user_path(@conn, :login)} as={:user}>
+<.form let={f} for={@conn} action={Routes.user_path(@conn, :login)} as={:form}>
   <%= if @error_message do %>
     <div class="alert alert-danger">
       <p><%= @error_message %></p>
