--- a/lib/interface/user/templates/reset_password.html.heex
+++ b/lib/interface/user/templates/reset_password.html.heex
@@ -1,6 +1,6 @@
 <h1>Reset password</h1>
 
-<.form let={f} for={@changeset} action={Routes.user_path(@conn, :reset_password, @token)} as={:user}>
+<.form let={f} for={@changeset} action={Routes.user_path(@conn, :reset_password, @token)} as={:form}>
   <%= if @changeset.action do %>
     <div class="alert alert-danger">
       <p>Oops, something went wrong! Please check the errors below.</p>
