--- a/lib/interface/user/templates/settings.html.heex
+++ b/lib/interface/user/templates/settings.html.heex
@@ -2,7 +2,7 @@
 
 <h3>Change email</h3>
 
-<.form let={f} for={@email_changeset} action={Routes.user_path(@conn, :start_email_change)} as={:change_email}>
+<.form :let={f} for={@email_changeset} action={Routes.user_path(@conn, :start_email_change)} as={:change_email}>
   <%= if @email_changeset.action do %>
     <div class="alert alert-danger">
       <p>Oops, something went wrong! Please check the errors below.</p>
@@ -24,7 +24,7 @@
 
 <h3>Change password</h3>
 
-<.form let={f} for={@password_changeset} action={Routes.user_path(@conn, :change_password)} as={:password}>
+<.form :let={f} for={@password_changeset} action={Routes.user_path(@conn, :change_password)} as={:password}>
   <%= if @password_changeset.action do %>
     <div class="alert alert-danger">
       <p>Oops, something went wrong! Please check the errors below.</p>
