--- a/lib/interface/user/templates/start_registration.html.heex
+++ b/lib/interface/user/templates/start_registration.html.heex
@@ -1,6 +1,6 @@
 <h1>Register</h1>
 
-<.form let={f} for={@changeset} action={Routes.user_path(@conn, :start_registration)} as={:form}>
+<.form :let={f} for={@changeset} action={Routes.user_path(@conn, :start_registration)} as={:form}>
   <%= if @changeset.action do %>
     <div class="alert alert-danger">
       <p>Oops, something went wrong! Please check the errors below.</p>
@@ -15,4 +15,3 @@
     <%= submit "Register" %>
   </div>
 </.form>
-
