--- a/lib/interface/user/templates/start_password_reset.html.heex
+++ b/lib/interface/user/templates/start_password_reset.html.heex
@@ -1,6 +1,6 @@
 <h1>Forgot your password?</h1>
 
-<.form :let={f} for={@changeset} action={Routes.user_path(@conn, :start_password_reset)} as={:form}>
+<.form :let={f} for={@changeset} action={~p"/start_password_reset"} as={:form}>
   <%= label f, :email %>
   <%= email_input f, :email, required: true %>
 
@@ -10,6 +10,6 @@
 </.form>
 
 <p>
-  <%= link "Register", to: Routes.user_path(@conn, :start_registration_form) %> |
-  <%= link "Log in", to: Routes.user_path(@conn, :login_form) %>
+  <%= link "Register", to: ~p"/start_registration" %> |
+  <%= link "Log in", to: ~p"/login" %>
 </p>
