--- a/lib/interface/layout/templates/root.html.heex
+++ b/lib/interface/layout/templates/root.html.heex
@@ -8,8 +8,8 @@
     <.live_title suffix=" · Phoenix Framework">
       <%= assigns[:page_title] || "Demo" %>
     </.live_title>
-    <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")}/>
-    <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
+    <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"}/>
+    <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}></script>
   </head>
   <body>
     <header>
@@ -17,12 +17,12 @@
         <nav>
           <ul>
             <%= if @current_user do %>
-              <li><%= link "Settings", to: Routes.user_path(@conn, :settings) %></li>
-              <li><%= link "Log out", to: Routes.user_path(@conn, :logout), method: :post %></li>
+              <li><%= link "Settings", to: ~p"/settings" %></li>
+              <li><%= link "Log out", to: ~p"/logout", method: :post %></li>
             <% end %>
 
-            <%= if function_exported?(Routes, :live_dashboard_path, 2) do %>
-              <li><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home) %></li>
+            <%= if function_exported?(Demo.Interface.Router.Helpers, :live_dashboard_path, 2) do %>
+              <li><%= link "LiveDashboard", to: Demo.Interface.Router.Helpers.live_dashboard_path(@conn, :home) %></li>
             <% end %>
 
             <%= if Demo.Helpers.mix_env() == :dev do %>
