--- a/lib/interface/user/templates/reset_password.html.heex
+++ b/lib/interface/user/templates/reset_password.html.heex
@@ -1,6 +1,6 @@
 <h1>Reset password</h1>
 
-<.form :let={f} for={@changeset} action={Routes.user_path(@conn, :reset_password, @token)} as={:form}>
+<.form :let={f} for={@changeset} action={~p"/reset_password/#{@token}"} as={:form}>
   <%= if @changeset.action do %>
     <div class="alert alert-danger">
       <p>Oops, something went wrong! Please check the errors below.</p>
@@ -17,6 +17,6 @@
 </.form>
 
 <p>
-  <%= link "Register", to: Routes.user_path(@conn, :start_registration_form) %> |
-  <%= link "Log in", to: Routes.user_path(@conn, :login_form) %>
+  <%= link "Register", to: ~p"/start_registration" %> |
+  <%= link "Log in", to: ~p"/login" %>
 </p>
