--- a/lib/interface/layout/html/root.html.heex
+++ b/lib/interface/layout/html/root.html.heex
@@ -29,7 +29,7 @@
             <%= if function_exported?(Demo.Interface.Router.Helpers, :live_dashboard_path, 2) do %>
               <li>
                 <.link href={Demo.Interface.Router.Helpers.live_dashboard_path(@conn, :home)}>
-                  Settings
+                  Dashboard
                 </.link>
               </li>
             <% end %>
