--- a/lib/interface/user/html/login.html.heex
+++ b/lib/interface/user/html/login.html.heex
@@ -15,11 +15,11 @@
 </.simple_form>
 
 <p>
-  <.link href={~p"/start_registration"} class="text-sm font-semibold">
+  <.link href={~p"/start_registration_form"} class="text-sm font-semibold">
     Register
   </.link>
   |
-  <.link href={~p"/start_password_reset"} class="text-sm font-semibold">
+  <.link href={~p"/start_password_reset_form"} class="text-sm font-semibold">
     Forgot your password?
   </.link>
 </p>
