--- a/lib/interface/user/html/reset_password.html.heex
+++ b/lib/interface/user/html/reset_password.html.heex
@@ -13,11 +13,11 @@
 </.simple_form>
 
 <p>
-  <.link href={~p"/start_registration"} class="text-sm font-semibold">
+  <.link href={~p"/start_registration_form"} class="text-sm font-semibold">
     Register
   </.link>
   |
-  <.link href={~p"/login"} class="text-sm font-semibold">
+  <.link href={~p"/login_form"} class="text-sm font-semibold">
     Log in
   </.link>
 </p>
