--- a/lib/interface/user/html/settings.html.heex
+++ b/lib/interface/user/html/settings.html.heex
@@ -8,7 +8,7 @@
   </.error>
 
   <.input field={f[:email]} type="email" label="Email" required />
-  <.input field={f[:password]} type="password" label="Password" required />
+  <.input field={f[:current_password]} type="password" label="Password" required />
 
   <:actions>
     <.button phx-disable-with="Changing...">Change email</.button>
@@ -22,8 +22,8 @@
     Oops, something went wrong! Please check the errors below.
   </.error>
 
-  <.input field={f[:current]} type="password" label="Current password" required />
-  <.input field={f[:new]} type="password" label="New password" required />
+  <.input field={f[:current_password]} type="password" label="Current password" required />
+  <.input field={f[:password]} type="password" label="New password" required />
 
   <:actions>
     <.button phx-disable-with="Changing...">Change password</.button>
