--- a/lib/interface/user/html/settings.html.heex
+++ b/lib/interface/user/html/settings.html.heex
@@ -18,7 +18,7 @@
 <h3>Change password</h3>
 
 <.simple_form :let={f} for={@password_changeset} action={~p"/change_password"} as={:password}>
-  <.error :if={@email_changeset.action}>
+  <.error :if={@password_changeset.action}>
     Oops, something went wrong! Please check the errors below.
   </.error>
 
